Fix mobile footer profile picture cropping
Add rounded corners to footer profile picture (so cropped as circle).

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -388,6 +388,7 @@ ul {
         height: auto;
         margin: auto;
         text-align: center;
+        border-radius: 50%;
     }
 
     .footer-text-container {
